--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Website title -->
-  <title>Go Tutorial</title>
+  <title>Kotlin Tutorial</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -90,14 +90,18 @@ Next quiz does not have a time limit, but you should finish in less than 30 minu
 </div>
 
 <div class="text-center">
-<a href="https://forms.gle/y35hYRc6qGXD2EZG7" target="_blank" rel="noopener noreferrer">
-<img src="img/go-quiz.png" width="200" alt="Kotlin Quiz" class="border shadow"/></a>
+<a href="https://forms.gle/F5m4c4nU4KwcrvGs7" target="_blank" rel="noopener noreferrer">
+<img src="img/kotlin-quiz.png" width="200" alt="Kotlin Quiz" class="border shadow"/></a>
 <p>Kotlin - Quiz</p>
 </div>
 
 <h4>Contribute:</h4>
 
 <p>You can contribute to this quiz if you have a google account. Join Discord for details.</p>
+
+<a  target="_blank" rel="noopener noreferrer" 
+    href = "https://docs.google.com/forms/d/1Di3pxvtV-h7VtsfKWXBnk9KAYv-ph_zjWD-aIoQZl6Q/edit?usp=sharing"
+>Edit Quiz</a>
 
 <hr>
 
