--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Kotlin is a modern, concise and safe programming language. It is compatible with
 
 <div class="text-center">
 <a href="https://www.twitch.tv/emoise" target="_blank" rel="nofollow noopener noreferrer">
-<img src="../images/twitch_logo.png" width="200" alt="Go Tutorial"/>
+<img src="../images/twitch_logo.png" width="200" alt="Kotlin Tutorial"/>
 <p>▶ Play Recording</p>
 </a>
 </div>
