--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Free Kotlin programming tutorial.">
+  <meta name="description" content="Introductory Kotlin">
   <meta name="author" content="Regina Ganser">
   <meta name="keywords" content="kotlin, programming, tutorial">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
